--- a/async-response/App/Properties/launchSettings.json
+++ b/async-response/App/Properties/launchSettings.json
@@ -2,12 +2,20 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:18080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:18080"
+    },
+    "WSL": {
+      "commandName": "WSL",
+      "launchUrl": "http://localhost:18080",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:18080"
+      },
+      "distributionName": ""
     }
   }
 }
