--- a/minimal-api-example/App/App.fsproj
+++ b/minimal-api-example/App/App.fsproj
@@ -1,11 +1,10 @@
+<!-- App/App.fsproj -->
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="Controller.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
 </Project>
